# bini-ai

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Justfile  README.md  compose.mcp.yaml  compose.yaml  deploy.dev.sh  deploy.dev.yaml  deploy.monitoring.yaml  deploy.prod.sh  deploy.prod.yaml  docker-bake.hcl  lab.py  main.py  pyproject.toml  settings.py
.claude/agents/: AGENT.md  qa-image-bini-vision.md
.claude/commands/: COMMAND.md  qa-image-bini-vision.md
.claude/skills/: SKILL.md
.devflow/docs/design/: bini-vision-expansion.2026-06-04_1200.md  claude-proxy-v2.2026-06-11_1430.md
.devflow/memory/: .pending-turns.jsonl
.devflow/sidecar/: .learning-runs-today
.github/: copilot-instructions.md
.github/agents/: crewai-best-practices.agent.md  fastapi-production-ready.agent.md
.github/skills/basic-agent/: SKILL.md
ai/agents/: single_agent.py
ai/agents/vision_agent/: DIFF.md  crew.py  flow.py  schemas.py
ai/tools/: vision_tool.py
backend/: paths.py  settings.py
backend/ai/agents/html_agent/: crew.py  (+1 more)
backend/ai/flows/: text.py
backend/ai/mcp/: service.py  vision_mcp.py
backend/ai/tools/: stt.py  vision_tool.py
backend/functions/: common.py  common.ts  mcp.py
backend/utils/: infrastructure.py  logger.py  project_path.py  semantic_search.py
client/: bini.py  example.py
functions/: common.py  common.ts
k8s/: cluster.yaml
k8s/deployments/dev/: ingress-patch.yaml  kustomization.yaml
k8s/deployments/prod/: ingress-patch.yaml  kustomization.yaml
k8s/monitoring/: kustomization.yaml  servicemonitors.yaml
k8s/schemas/: bini.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  network-policy.yaml  pdb.yaml
ops/monitoring/: grafana-datasource.yaml  prometheus.yaml
ops/nginx/: nginx.conf
ops/scripts/: install_azure_cli.sh  pull.sh  secrets.sh  setup.sh
services/: api.py  bini.py  claude_proxy.py  mcp.py  mcp_server.py
temp/: README.md  pyproject.toml
temp/src/temp/: main.py
tests/: conftest.py  pytest.ini  test_image.py  test_image_contract.py  test_load.py  test_presentation.py  test_proxy_auth.py  test_proxy_concurrency.py  test_proxy_unit.py  test_regression.py  test_stack.py  test_text.py  test_vision.py
tests/data/: schemas.py  tenants.html
tests/data/meetings/: summary.txt
utils/: infrastructure.py  logger.py  paths.py
(+26 files in other folders)
