[project]
name = "bini"
version = "1.3.0"
description = "Bini app"
authors = [{ name = "Jenia", email = "medvijenia@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"


dependencies = [
    "crewai",
    "crewai[tools]",
    "crewai-tools[mcp]",
    "crewai[anthropic]",
    "fastmcp",
    "python-dotenv",
    "requests",
    "fastapi",
    "uvicorn",
    "pydantic",
    "aiohttp",
    "aiofiles",
    "logfire",
    "pytest",
    "pydantic-settings",
    "allure-pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "pytest-repeat>=0.9.4",
    "playwright>=1.58.0",
]
