[project]
name = "bini"
version = "1.3.0"
description = "Bini app"
authors = [{ name = "Jenia", email = "medvijenia@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"


dependencies = [
    "crewai",
    "crewai[tools]",
    "crewai-tools[mcp]",
    "crewai[anthropic]",
    "fastmcp[apps]",
    "python-dotenv",
    "requests",
    "fastapi",
    "uvicorn",
    "pydantic",
    "aiohttp",
    "aiofiles",
    "logfire",
]
