[project]
name = "bini"
version = "1.3.0"
description = "Bini app"
authors = [{ name = "Jenia", email = "medvijenia@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<=3.13"


dependencies = [
    "crewai",
    "crewai[tools]",
    "crewai-tools[mcp]",
    "crewai[anthropic]",
    "crewai[litellm]",
    "fastmcp[apps]",
    "python-dotenv",
    "requests",
    "fastapi",
    "uvicorn",
    "pydantic",
    "aiohttp",
    "aiofiles",
    "logfire",
    "mcp",
    "pytest",
    "pytest-asyncio>=0.24.0",
    "allure-pytest>=2.16.0",
    "pytest-xdist>=3.8.0",
    "pydantic-settings>=2.10.1",
    "httpx>=0.27.0",
]
