[project]
name = "temp"
version = "0.1.0"
description = "temp using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
kickoff = "temp.main:kickoff"
run_crew = "temp.main:kickoff"
plot = "temp.main:plot"
run_with_trigger = "temp.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
